# untitled_marlo_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  game  untitled marlo project  untitled_marlo_project dev diary
cmake/: Toolchain-cross-mingw32-linux.cmake  Toolchain-cross-ubuntu-linux.cmake
cmake/Modules/: FindBoost.cmake
fonts/: ubuntuMonoR.DDS
src/: game.cpp
